syntax = "proto3";
package jetstream.network_exchange;

service NetworkExchange {
  // Basic stream for the network exchange
  rpc SimpleExchange(SubscribeRequest) returns (stream ExchangeMessage) {}
}

message ExchangeMessage {
  // This is just a wrapper which contains the real encoded type
  // TODO: Evaluate whether this is really a smart thing to do
  // For now it makes the build process easier
  oneof ExchangeContent {
    uint64 frontier = 1;
    bytes data = 2;
    Barrier barrier = 3;
  }
}
// Indicates an ABS barrier
message Barrier {}

// Message to subscribe to updates
message SubscribeRequest {
  // this is an id the client uses to identify itself
  // technically there are no rules here, but this should ideally
  // be stable. Good choice: Pod Ordinal Index of a stateful set
  string client_id = 1;
}